<resources>
    <string name="app_name">Hopsquad App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beers</string>
    <string name="title_dashboard">User</string>
    <string name="title_notifications">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_password">Password</string>
    <string name="account_birthday">Birthday</string>
    <string name="account_payment">Payment</string>
    <string name="account_signout">Sign Out</string>
    <string name="payment_cvv">CVV</string>
    <string name="payment_expiration">Exp</string>
    <string name="PasswordPlaceholder">* * * * * *</string>
    <string name="BeerPricePlaceHolder">$00.00</string>
    <string name="beerImageContentDescription">An image of a beer</string>
    <string name="ABVPlaceholder">99.9%</string>
    <string name="StylePlaceholder">Lager</string>
    <string name="NamePlaceholder">Beer Name</string>
    <string name="IBUSPlaceholder">0</string>
    <string name="SRMPlaceholder">0</string>
    <string name="ReviewPlaceHolder">5.0</string>
    <string name="DescriptionPlaceHolder">This beer is described here.</string>

    <string-array name="beer_order_amount">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="confirm_order_dialog_button">Place Order</string>
    <string name="cancel_order_button_dialog">Cancel</string>
    <string name="order_succesfully_placed_msg">We\'re serving your beer! Remember to bring your ID to the bar. </string>
    <string name="order_confirmation_generic_error">There was an error, please try again later.</string>
    <string name="confirm_order_dialog_title">Confirm Order</string>
    <string name="order_history_title">Order History</string>
    <string name="my_rewards_title">My Rewards</string>
    <string name="prompt_name">Name</string>
    <string name="orderAgainButton">Order</string>
    <string name="addReviewButton">Review</string>
    <string name="dateOfBirthPlaceHolder">Date of Birth</string>
    <string name="RewardsPlaceholder">Rewards coming soon. Check back later for updates and rewards on your account!</string>
    <string name="add_review_dialog_title">Review this Beer</string>
    <string name="confirm_add_review_dialog_button">Add Review</string>
    <string name="cancel_add_review_dialog_button">Cancel</string>
</resources>
