<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hopsquad.hopsquadapp.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/nameField"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/nameField"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_email"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintRight_toLeftOf="@+id/emailField"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/emailField"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/account_password"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/passwordField"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/passwordField"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_birthday"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/editText6"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/editText6"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_payment"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/cardNumberField"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/cardNumberField"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nameField"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />

        <EditText
            android:id="@+id/cardNumberField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <EditText
            android:id="@+id/cvvField"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/payment_cvv"
            android:inputType="number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberField"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/expirationDateField"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/payment_expiration"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/cvvField"
            app:layout_constraintRight_toLeftOf="@+id/cvvField" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
